--- a/css/styles.css
+++ b/css/styles.css
@@ -5,22 +5,11 @@ body {
   background-size: auto;
 }
 
+/* SUN */
 .sun {
   position: absolute;
   left: -300px;
   top: -100px;
-}
-
-.earth {
-  position: absolute;
-  right: 80px;
-  top: 120px;
-}
-
-@media screen and (max-width: 800px) {
-  .earth {
-    right: 10px;
-  }   
 }
 
 .rotate-slow-left {
@@ -39,4 +28,73 @@ body {
 @keyframes spinright {
   from { transform: rotate(0deg); }
   to { transform: rotate(359deg); }
+}
+
+/* EARTH */
+.earth {
+  position: absolute;
+  right: 20px;
+  top: 60px;
+}
+
+/* FIREBALL */
+.fireball {
+  height: 10px;
+  position: relative;
+  right: 130px;
+  top: 125px;
+}
+
+.flying {
+  animation: shootwidescreen 480s;
+  animation-timing-function: linear;
+}
+
+@keyframes shootwidescreen {
+  from { right: 130px; }
+  to { right: 4000px; }
+}
+
+/* BUTTON */
+.shoot {
+  position: absolute;
+  top: 90px;
+}
+
+button {
+  background: transparent;
+  color: #fff;
+  border: 3px solid #fff;
+  border-radius: 50px;
+  padding: 0.8rem 2rem;
+  font: 24px "Margarine", sans-serif;
+  outline: none;
+  cursor: pointer;
+  position: relative;
+  transition: 0.2s ease-in-out;
+  letter-spacing: 2px;
+}
+
+.button-jittery button {
+  animation: jittery 6s infinite;
+}
+
+.button-jittery button:hover {
+  animation: heartbeat 0.4s infinite;
+}
+
+@keyframes jittery {
+  5%,
+  50% { transform: scale(1); }
+  10% { transform: scale(0.9); }
+  15% { transform: scale(1.15); }
+  20% { transform: scale(1.15) rotate(-5deg); }
+  25% { transform: scale(1.15) rotate(5deg); }
+  30% { transform: scale(1.15) rotate(-3deg); }
+  35% { transform: scale(1.15) rotate(2deg); }
+  40% { transform: scale(1.15) rotate(0); }
+}
+
+@keyframes heartbeat {
+  50% { transform: scale(1.1); }
 }
