temporary commit, bulma integration + refactoring

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,109 +1,4 @@
-body {
-  background-image: url("../images/background/background.png");
-  background-color: #321240;
-  background-repeat: no-repeat;
-  background-size: auto;
-}
-
-/* SUN */
-.sun {
-  position: absolute;
-  left: -300px;
-  top: -100px;
-}
-
-.rotate-slow-left {
-  animation: spinleft 30s infinite linear;
-}
-
-.rotate-slow-right {
-  animation: spinright 35s infinite linear;
-}
-
-@keyframes spinleft {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(-359deg); }
-}
-
-@keyframes spinright {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(359deg); }
-}
-
-/* EARTH */
-.earth {
-  position: absolute;
-  right: 20px;
-  top: 60px;
-}
-
-/* ROCKET */
-.rocket-body, 
-.rocket-body-flying
- {
-  position: absolute;
-  height: 40px;
-  right: 148px;
-  top: 115px;
-}
-.rocket-body-flying {
-  animation: rocketfly 480s linear;
-}
-
-@keyframes rocketfly {
-  from { right: 148px; }
-  to { right: 4000px; }
-}
-
-@keyframes fuelburning {
-  50% { transform: scale(1.2); }
-}
-
-.rocket-flame,
-.rocket-flame-flying  {
-  position: absolute;
-  height: 20px;
-  right: 125px;
-  top: 125px;
-}
-.rocket-flame-flying {
-  animation: fuelburning 1s infinite, flamefly 480s linear;
-}
-
-@keyframes flamefly {
-  from { right: 125px; }
-  to { right: 4000px; }
-}
-
-@keyframes fuelburning {
-  50% { transform: scale(1.2); }
-}
-
-/* BUTTON */
-.launch {
-  top: 90px;
-  text-align: center;
-}
-
-button {
-  background: transparent;
-  color: #fff;
-  border: 3px solid #fff;
-  border-radius: 50px;
-  padding: 0.8rem 2rem;
-  font: 24px "Margarine", sans-serif;
-  outline: none;
-  cursor: pointer;
-  position: relative;
-  transition: 0.2s ease-in-out;
-  letter-spacing: 2px;
-}
-
-
-.button-launch button {
-  animation: heartbeat 1s infinite;
-}
-
-@keyframes heartbeat {
-  50% { transform: scale(1.1); }
-}
+@import "sun.css";
+@import "earth.css";
+@import "bulma-override.css";
+@import "general.css";
