--- a/css/earth.css
+++ b/css/earth.css
@@ -2,9 +2,8 @@
 .earth {
   position: absolute;
   right: 20px;
-  top: 60px;
+  top: 110px;
 }
-
 
 /* ROCKET */
 .rocket-body, 
@@ -13,7 +12,8 @@
   position: absolute;
   height: 40px;
   right: 148px;
-  top: 115px;
+  top: 165px;
+  z-index: -2;
 }
 .rocket-body-flying {
   animation: rocketfly 480s linear;
@@ -24,16 +24,13 @@
   to { right: 4000px; }
 }
 
-@keyframes fuelburning {
-  50% { transform: scale(1.2); }
-}
-
 .rocket-flame,
 .rocket-flame-flying  {
   position: absolute;
   height: 20px;
   right: 125px;
-  top: 125px;
+  top: 175px;
+  z-index: -2;
 }
 .rocket-flame-flying {
   animation: fuelburning 1s infinite, flamefly 480s linear;
@@ -46,4 +43,25 @@
 
 @keyframes fuelburning {
   50% { transform: scale(1.2); }
+}
+
+/* ROCKET */
+.rocket-smoke, 
+.rocket-smoke-flying
+ {
+  opacity: 0;
+  position: absolute;
+  height: 80px;
+  right: 134px;
+  top: 146px;
+  z-index: -3;
+}
+.rocket-smoke-flying {
+  animation: launchsmoke 10s normal forwards;
+}
+
+@keyframes launchsmoke {
+  0% { opacity: 0; }
+  20%{ opacity: 1; }
+  100% { opacity: 0; }
 }
