--- a/css/bulma-override.css
+++ b/css/bulma-override.css
@@ -1,3 +1,12 @@
 .hero-body {
-  padding: 1rem 1.5rem;
+  padding: 0rem 1.5rem;
+}
+
+.hero-body
+.title {
+  font-size: 3em
+}
+
+.footer {
+  padding: 2rem 1.5rem 2rem
 }
