--- a/css/bulma-override.css
+++ b/css/bulma-override.css
@@ -1,12 +1,15 @@
 .hero-body {
-  padding: 0rem 1.5rem;
+  padding: 0 1.5rem;
 }
 
-.hero-body
-.title {
+.hero-body .title {
   font-size: 3em
 }
 
 .footer {
   padding: 2rem 1.5rem 2rem
+}
+
+.box {
+  background-color: rgba(255, 255, 255, .75);
 }
