--- a/css/bulma-override.css
+++ b/css/bulma-override.css
@@ -1,9 +1,10 @@
 .hero-body {
   padding: 0 1.5rem;
+  font-family: "Bree Serif", serif;
 }
 
 .hero-body .title {
-  font-size: 3em
+  font-size: 3em;
 }
 
 .footer {
@@ -11,5 +12,5 @@
 }
 
 .box {
-  background-color: rgba(255, 255, 255, .75);
+  background-color: rgba(255, 255, 255, .6);
 }
