--- a/css/sun.css
+++ b/css/sun.css
@@ -8,19 +8,19 @@
 }
 
 .rotate-slow-left {
-  animation: spinleft 30s infinite linear;
+  animation: spinLeft 30s infinite linear;
 }
 
 .rotate-slow-right {
-  animation: spinright 35s infinite linear;
+  animation: spinRight 35s infinite linear;
 }
 
-@keyframes spinleft {
+@keyframes spinLeft {
   from { transform: rotate(0deg); }
   to { transform: rotate(-359deg); }
 }
 
-@keyframes spinright {
+@keyframes spinRight {
   from { transform: rotate(0deg); }
   to { transform: rotate(359deg); }
 }
